[gd_scene load_steps=5 format=3 uid="uid://brpvpmxdnwafe"]

[ext_resource type="Script" path="res://scripts/encounter_2.gd" id="1_0a2m2"]
[ext_resource type="Texture2D" uid="uid://db3s5porrsgif" path="res://images/background/encounter_background.jpg" id="1_qqwd4"]
[ext_resource type="Texture2D" uid="uid://ixl73ym7eqvx" path="res://images/encounters/sign_encounter_2/Blank-Sign.png" id="3_hfykr"]
[ext_resource type="Texture2D" uid="uid://c55bplvds7ki8" path="res://images/direction/orange-right-arrow.png" id="4_j0cyq"]

[node name="Encounter2_tscn" type="Node2D"]
script = ExtResource("1_0a2m2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 647.0
color = Color(0, 0, 0, 1)

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(577.5, 324.5)
scale = Vector2(1.71577, 1.6125)
texture = ExtResource("1_qqwd4")

[node name="Sign" type="Sprite2D" parent="."]
position = Vector2(571, 295)
scale = Vector2(0.40724, 0.462058)
texture = ExtResource("3_hfykr")

[node name="Right" type="Button" parent="."]
offset_left = 968.0
offset_top = 451.0
offset_right = 1068.0
offset_bottom = 551.0
focus_mode = 0
flat = true

[node name="Left" type="Button" parent="."]
offset_left = 82.0
offset_top = 450.0
offset_right = 182.0
offset_bottom = 550.0
focus_mode = 0
flat = true

[node name="Straight" type="Button" parent="."]
offset_left = 521.0
offset_top = 450.0
offset_right = 621.0
offset_bottom = 550.0
focus_mode = 0
flat = true

[node name="Arrow1" type="Sprite2D" parent="."]
position = Vector2(1020, 500)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_j0cyq")

[node name="Arrow2" type="Sprite2D" parent="."]
position = Vector2(132, 500)
rotation = 3.14159
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_j0cyq")

[node name="Arrow3" type="Sprite2D" parent="."]
position = Vector2(571, 500)
rotation = 1.5708
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_j0cyq")

[node name="Romanian" type="Label" parent="."]
offset_left = 488.0
offset_top = 224.0
offset_right = 652.0
offset_bottom = 247.0
horizontal_alignment = 1

[node name="QuestionLabel" type="Label" parent="."]
offset_right = 1154.0
offset_bottom = 151.0
theme_override_colors/font_color = Color(0.957844, 0.664739, 0.0195007, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 54
text = "???"
horizontal_alignment = 1

[connection signal="pressed" from="Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Straight" to="." method="_on_straight_pressed"]
